# KDD_RoboArm

./: cnc_input.py  img_index.py  listofpathpoint.py  mother_board.json  right_chip.json
KDD_RoboArm/: CMakeLists.txt  joint_names_KDD_RoboArm(moveable_nizzle).yaml  package.xml
KDD_RoboArm/config/: joint_names_KDD_RoboArm.yaml
KDD_RoboArm/launch/: KDD_RoboArm_controller.launch  display.launch  gazebo.launch  gazebo_command_gui.launch
KDD_RoboArm/meshes/: base_link(no_motherboard).STL  base_link.STL
KDD_RoboArm/robots/: KDD_RoboArm(moveable_nozzle).urdf  KDD_RoboArm.csv  KDD_RoboArm.urdf
KDD_RoboArm/src/gazebo_command_gui/: CMakeLists.txt  package.xml
KDD_RoboArm/src/gazebo_command_gui/src/: amazing_gui.py  gazebo_command_gui.py  jointInfo.py
cnc_test17/: CMakeLists.txt  joint_names_cnc_test17(moveable_nizzle).yaml  package.xml
cnc_test17/config/: joint_names_cnc_test17.yaml
cnc_test17/launch/: cnc_test17_controller.launch  display.launch  gazebo.launch
cnc_test17/meshes/: front_end_link.STL  left_right_link.STL  nozzle_Link.STL  nozzlebase_Link.STL  up_down_link.STL
cnc_test17/robots/: cnc_test17(moveable_nozzle).urdf  cnc_test17.urdf
gazebo_command_gui/: amazing_gui.py  cnc_test17.urdf  jointInfo.py  main.py
gazebo_snake_control/: cnc_test17.urdf  main.py
